--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,8 +10,8 @@
     "sourceMap": true,
     "jsx": "react",
     "typeRoots": ["index.d.ts", "node_modules/@types"],
-    "lib": ["es2015","dom"]
+    "lib": ["es2015", "dom"]
   },
   "include": ["./src/**/*.tsx", "./src/**/*.ts"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "**/*.test.ts", "**/*.test.tsx"]
 }
