--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "lint": "tslint -c tslint.json --project tsconfig.json",
     "prepare": "npm run test && npm run lint && npm run build"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint && npm test",
+      "pre-push": "npm run lint && npm test"
+    }
+  },
   "keywords": [
     "react",
     "gist",
@@ -34,6 +40,7 @@
     "@types/react-dom": "^16.8.3",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.11.2",
+    "husky": "^1.3.1",
     "jest": "^24.5.0",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
