--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint && npm test",
       "pre-push": "npm run lint && npm test"
     }
   },
@@ -38,6 +37,7 @@
     "@types/jest": "^24.0.11",
     "@types/react": "^16.8.10",
     "@types/react-dom": "^16.8.3",
+    "codecov": "^3.2.0",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.11.2",
     "husky": "^1.3.1",
